--- a/PSI_3rd_trial/domain_model.tex
+++ b/PSI_3rd_trial/domain_model.tex
@@ -9,26 +9,33 @@
 \draw[pstyle0] (317.835pt,14pt) ellipse (8pt and 8pt);
 \draw[color=plantucolor0001,line width=0.5pt] (317.835pt,22pt) -- (317.835pt,49pt)(304.835pt,30pt) -- (330.835pt,30pt)(317.835pt,49pt) -- (304.835pt,64pt)(317.835pt,49pt) -- (330.835pt,64pt);
 \node at (304pt,65.5pt)[below right,color=black,inner sep=0]{Player};
-\draw[pstyle0] (315.5pt,140.5pt) arc (180:270:5pt) -- (320.5pt,135.5pt) -- (395.11pt,135.5pt) arc (270:360:5pt) -- (400.11pt,140.5pt) -- (400.11pt,160.5pt) arc (0:90:5pt) -- (395.11pt,165.5pt) -- (320.5pt,165.5pt) arc (90:180:5pt) -- (315.5pt,160.5pt) -- cycle;
-\node at (325.5pt,145.5pt)[below right,color=black,inner sep=0]{Player account};
-\draw[pstyle0] (382pt,410.5pt) arc (180:270:5pt) -- (387pt,405.5pt) -- (422.62pt,405.5pt) arc (270:360:5pt) -- (427.62pt,410.5pt) -- (427.62pt,430.5pt) arc (0:90:5pt) -- (422.62pt,435.5pt) -- (387pt,435.5pt) arc (90:180:5pt) -- (382pt,430.5pt) -- cycle;
-\node at (392pt,415.5pt)[below right,color=black,inner sep=0]{Game};
-\draw[pstyle0] (359pt,320.5pt) arc (180:270:5pt) -- (364pt,315.5pt) -- (446.05pt,315.5pt) arc (270:360:5pt) -- (451.05pt,320.5pt) -- (451.05pt,340.5pt) arc (0:90:5pt) -- (446.05pt,345.5pt) -- (364pt,345.5pt) arc (90:180:5pt) -- (359pt,340.5pt) -- cycle;
-\node at (369pt,325.5pt)[below right,color=black,inner sep=0]{High score entry};
-\draw[pstyle0] (458.5pt,230.5pt) arc (180:270:5pt) -- (463.5pt,225.5pt) -- (528.43pt,225.5pt) arc (270:360:5pt) -- (533.43pt,230.5pt) -- (533.43pt,250.5pt) arc (0:90:5pt) -- (528.43pt,255.5pt) -- (463.5pt,255.5pt) arc (90:180:5pt) -- (458.5pt,250.5pt) -- cycle;
-\node at (468.5pt,235.5pt)[below right,color=black,inner sep=0]{Leaderboard};
-\draw[pstyle0] (175.5pt,500.5pt) arc (180:270:5pt) -- (180.5pt,495.5pt) -- (241.95pt,495.5pt) arc (270:360:5pt) -- (246.95pt,500.5pt) -- (246.95pt,520.5pt) arc (0:90:5pt) -- (241.95pt,525.5pt) -- (180.5pt,525.5pt) arc (90:180:5pt) -- (175.5pt,520.5pt) -- cycle;
-\node at (185.5pt,505.5pt)[below right,color=black,inner sep=0]{Aim trainer};
-\draw[pstyle0] (281.5pt,500.5pt) arc (180:270:5pt) -- (286.5pt,495.5pt) -- (329.18pt,495.5pt) arc (270:360:5pt) -- (334.18pt,500.5pt) -- (334.18pt,520.5pt) arc (0:90:5pt) -- (329.18pt,525.5pt) -- (286.5pt,525.5pt) arc (90:180:5pt) -- (281.5pt,520.5pt) -- cycle;
-\node at (291.5pt,505.5pt)[below right,color=black,inner sep=0]{Pair up};
-\draw[pstyle0] (370pt,500.5pt) arc (180:270:5pt) -- (375pt,495.5pt) -- (434.72pt,495.5pt) arc (270:360:5pt) -- (439.72pt,500.5pt) -- (439.72pt,520.5pt) arc (0:90:5pt) -- (434.72pt,525.5pt) -- (375pt,525.5pt) arc (90:180:5pt) -- (370pt,520.5pt) -- cycle;
-\node at (380pt,505.5pt)[below right,color=black,inner sep=0]{Math game};
-\draw[pstyle0] (475.5pt,500.5pt) arc (180:270:5pt) -- (480.5pt,495.5pt) -- (523.02pt,495.5pt) arc (270:360:5pt) -- (528.02pt,500.5pt) -- (528.02pt,520.5pt) arc (0:90:5pt) -- (523.02pt,525.5pt) -- (480.5pt,525.5pt) arc (90:180:5pt) -- (475.5pt,520.5pt) -- cycle;
-\node at (485.5pt,505.5pt)[below right,color=black,inner sep=0]{Sudoku};
-\draw[pstyle0] (116.5pt,230.5pt) arc (180:270:5pt) -- (121.5pt,225.5pt) -- (232.53pt,225.5pt) arc (270:360:5pt) -- (237.53pt,230.5pt) -- (237.53pt,250.5pt) arc (0:90:5pt) -- (232.53pt,255.5pt) -- (121.5pt,255.5pt) arc (90:180:5pt) -- (116.5pt,250.5pt) -- cycle;
-\node at (126.5pt,235.5pt)[below right,color=black,inner sep=0]{Score visibility settings};
-\draw[pstyle0] (564pt,500.5pt) arc (180:270:5pt) -- (569pt,495.5pt) -- (619.42pt,495.5pt) arc (270:360:5pt) -- (624.42pt,500.5pt) -- (624.42pt,520.5pt) arc (0:90:5pt) -- (619.42pt,525.5pt) -- (569pt,525.5pt) arc (90:180:5pt) -- (564pt,520.5pt) -- cycle;
-\node at (574pt,505.5pt)[below right,color=black,inner sep=0]{Difficulty};
+\draw[pstyle0] (356.5pt,140.5pt) arc (180:270:5pt) -- (361.5pt,135.5pt) -- (436.11pt,135.5pt) arc (270:360:5pt) -- (441.11pt,140.5pt) -- (441.11pt,160.5pt) arc (0:90:5pt) -- (436.11pt,165.5pt) -- (361.5pt,165.5pt) arc (90:180:5pt) -- (356.5pt,160.5pt) -- cycle;
+\node at (366.5pt,145.5pt)[below right,color=black,inner sep=0]{Player account};
+\draw[pstyle0] (388pt,414.5pt) arc (180:270:5pt) -- (393pt,409.5pt) -- (499.24pt,409.5pt) arc (270:360:5pt) -- (504.24pt,414.5pt) -- (504.24pt,448.61pt) arc (0:90:5pt) -- (499.24pt,453.61pt) -- (393pt,453.61pt) arc (90:180:5pt) -- (388pt,448.61pt) -- cycle;
+\node at (398pt,412.5pt)[below right,color=black,inner sep=0]{Game};
+\draw[pstyle2] (389pt,422.5pt) -- (503.24pt,422.5pt);
+\node at (398pt,426.5pt)[below right,color=black,inner sep=0]{+ description : String};
+\node at (398pt,436.61pt)[below right,color=black,inner sep=0]{+ difficulty : String};
+\draw[pstyle0] (400pt,320.5pt) arc (180:270:5pt) -- (405pt,315.5pt) -- (487.05pt,315.5pt) arc (270:360:5pt) -- (492.05pt,320.5pt) -- (492.05pt,344.5pt) arc (0:90:5pt) -- (487.05pt,349.5pt) -- (405pt,349.5pt) arc (90:180:5pt) -- (400pt,344.5pt) -- cycle;
+\node at (410pt,318.5pt)[below right,color=black,inner sep=0]{High score entry};
+\draw[pstyle2] (401pt,328.5pt) -- (491.05pt,328.5pt);
+\node at (410pt,332.5pt)[below right,color=black,inner sep=0]{+ score : int};
+\draw[pstyle0] (425pt,608.5pt) arc (180:270:5pt) -- (430pt,603.5pt) -- (461.7pt,603.5pt) arc (270:360:5pt) -- (466.7pt,608.5pt) -- (466.7pt,628.5pt) arc (0:90:5pt) -- (461.7pt,633.5pt) -- (430pt,633.5pt) arc (90:180:5pt) -- (425pt,628.5pt) -- cycle;
+\node at (435pt,613.5pt)[below right,color=black,inner sep=0]{Card};
+\draw[pstyle0] (231.5pt,518.5pt) arc (180:270:5pt) -- (236.5pt,513.5pt) -- (273.19pt,513.5pt) arc (270:360:5pt) -- (278.19pt,518.5pt) -- (278.19pt,538.5pt) arc (0:90:5pt) -- (273.19pt,543.5pt) -- (236.5pt,543.5pt) arc (90:180:5pt) -- (231.5pt,538.5pt) -- cycle;
+\node at (241.5pt,523.5pt)[below right,color=black,inner sep=0]{Timer};
+\draw[pstyle0] (499.5pt,230.5pt) arc (180:270:5pt) -- (504.5pt,225.5pt) -- (569.43pt,225.5pt) arc (270:360:5pt) -- (574.43pt,230.5pt) -- (574.43pt,250.5pt) arc (0:90:5pt) -- (569.43pt,255.5pt) -- (504.5pt,255.5pt) arc (90:180:5pt) -- (499.5pt,250.5pt) -- cycle;
+\node at (509.5pt,235.5pt)[below right,color=black,inner sep=0]{Leaderboard};
+\draw[pstyle0] (313.5pt,518.5pt) arc (180:270:5pt) -- (318.5pt,513.5pt) -- (379.95pt,513.5pt) arc (270:360:5pt) -- (384.95pt,518.5pt) -- (384.95pt,538.5pt) arc (0:90:5pt) -- (379.95pt,543.5pt) -- (318.5pt,543.5pt) arc (90:180:5pt) -- (313.5pt,538.5pt) -- cycle;
+\node at (323.5pt,523.5pt)[below right,color=black,inner sep=0]{Aim trainer};
+\draw[pstyle0] (419.5pt,518.5pt) arc (180:270:5pt) -- (424.5pt,513.5pt) -- (467.18pt,513.5pt) arc (270:360:5pt) -- (472.18pt,518.5pt) -- (472.18pt,538.5pt) arc (0:90:5pt) -- (467.18pt,543.5pt) -- (424.5pt,543.5pt) arc (90:180:5pt) -- (419.5pt,538.5pt) -- cycle;
+\node at (429.5pt,523.5pt)[below right,color=black,inner sep=0]{Pair up};
+\draw[pstyle0] (508pt,518.5pt) arc (180:270:5pt) -- (513pt,513.5pt) -- (572.72pt,513.5pt) arc (270:360:5pt) -- (577.72pt,518.5pt) -- (577.72pt,538.5pt) arc (0:90:5pt) -- (572.72pt,543.5pt) -- (513pt,543.5pt) arc (90:180:5pt) -- (508pt,538.5pt) -- cycle;
+\node at (518pt,523.5pt)[below right,color=black,inner sep=0]{Math game};
+\draw[pstyle0] (613.5pt,518.5pt) arc (180:270:5pt) -- (618.5pt,513.5pt) -- (661.02pt,513.5pt) arc (270:360:5pt) -- (666.02pt,518.5pt) -- (666.02pt,538.5pt) arc (0:90:5pt) -- (661.02pt,543.5pt) -- (618.5pt,543.5pt) arc (90:180:5pt) -- (613.5pt,538.5pt) -- cycle;
+\node at (623.5pt,523.5pt)[below right,color=black,inner sep=0]{Sudoku};
+\draw[pstyle0] (157.5pt,230.5pt) arc (180:270:5pt) -- (162.5pt,225.5pt) -- (273.53pt,225.5pt) arc (270:360:5pt) -- (278.53pt,230.5pt) -- (278.53pt,250.5pt) arc (0:90:5pt) -- (273.53pt,255.5pt) -- (162.5pt,255.5pt) arc (90:180:5pt) -- (157.5pt,250.5pt) -- cycle;
+\node at (167.5pt,235.5pt)[below right,color=black,inner sep=0]{Score visibility settings};
 \draw[pstyle0] (36pt,30.5pt) arc (180:270:5pt) -- (41pt,25.5pt) -- (91.47pt,25.5pt) arc (270:360:5pt) -- (96.47pt,30.5pt) -- (96.47pt,50.5pt) arc (0:90:5pt) -- (91.47pt,55.5pt) -- (41pt,55.5pt) arc (90:180:5pt) -- (36pt,50.5pt) -- cycle;
 \node at (46pt,35.5pt)[below right,color=black,inner sep=0]{Database};
 \draw[pstyle0] (131pt,30.5pt) arc (180:270:5pt) -- (136pt,25.5pt) -- (263.98pt,25.5pt) arc (270:360:5pt) -- (268.98pt,30.5pt) -- (268.98pt,50.5pt) arc (0:90:5pt) -- (263.98pt,55.5pt) -- (136pt,55.5pt) arc (90:180:5pt) -- (131pt,50.5pt) -- cycle;
@@ -37,44 +44,52 @@
 \node at (17pt,145.5pt)[below right,color=black,inner sep=0]{Authentication system};
 \draw[pstyle0] (367pt,30.5pt) arc (180:270:5pt) -- (372pt,25.5pt) -- (426.39pt,25.5pt) arc (270:360:5pt) -- (431.39pt,30.5pt) -- (431.39pt,50.5pt) arc (0:90:5pt) -- (426.39pt,55.5pt) -- (372pt,55.5pt) arc (90:180:5pt) -- (367pt,50.5pt) -- cycle;
 \node at (377pt,35.5pt)[below right,color=black,inner sep=0]{Player list};
-\draw[pstyle0] (272.5pt,230.5pt) arc (180:270:5pt) -- (277.5pt,225.5pt) -- (346.82pt,225.5pt) arc (270:360:5pt) -- (351.82pt,230.5pt) -- (351.82pt,250.5pt) arc (0:90:5pt) -- (346.82pt,255.5pt) -- (277.5pt,255.5pt) arc (90:180:5pt) -- (272.5pt,250.5pt) -- cycle;
-\node at (282.5pt,235.5pt)[below right,color=black,inner sep=0]{Game history};
-\draw[pstyle0] (568.5pt,230.5pt) arc (180:270:5pt) -- (573.5pt,225.5pt) -- (662.49pt,225.5pt) arc (270:360:5pt) -- (667.49pt,230.5pt) -- (667.49pt,250.5pt) arc (0:90:5pt) -- (662.49pt,255.5pt) -- (573.5pt,255.5pt) arc (90:180:5pt) -- (568.5pt,250.5pt) -- cycle;
-\node at (578.5pt,235.5pt)[below right,color=black,inner sep=0]{Personal statistics};
-\draw[pstyle0] (576pt,320.5pt) arc (180:270:5pt) -- (581pt,315.5pt) -- (655.03pt,315.5pt) arc (270:360:5pt) -- (660.03pt,320.5pt) -- (660.03pt,340.5pt) arc (0:90:5pt) -- (655.03pt,345.5pt) -- (581pt,345.5pt) arc (90:180:5pt) -- (576pt,340.5pt) -- cycle;
-\node at (586pt,325.5pt)[below right,color=black,inner sep=0]{Statistics filter};
-\draw[pstyle0] (469.5pt,590.5pt) arc (180:270:5pt) -- (474.5pt,585.5pt) -- (529.99pt,585.5pt) arc (270:360:5pt) -- (534.99pt,590.5pt) -- (534.99pt,610.5pt) arc (0:90:5pt) -- (529.99pt,615.5pt) -- (474.5pt,615.5pt) arc (90:180:5pt) -- (469.5pt,610.5pt) -- cycle;
-\node at (479.5pt,595.5pt)[below right,color=black,inner sep=0]{Board size};
-\draw[pstyle2] (365.5886pt,439.3778pt) ..controls (330.7686pt,455.1778pt) and (281pt,477.75pt) .. (241.98pt,495.45pt);
-\draw[pstyle2] (381.98pt,431.94pt) -- (363.1093pt,433.914pt) -- (368.0678pt,444.8416pt) -- (381.98pt,431.94pt) -- cycle;
-\draw[pstyle2] (376.0851pt,447.7305pt) ..controls (357.9751pt,464.1505pt) and (341.63pt,478.99pt) .. (323.55pt,495.4pt);
-\draw[pstyle2] (389.42pt,435.64pt) -- (372.0549pt,443.2855pt) -- (380.1153pt,452.1755pt) -- (389.42pt,435.64pt) -- cycle;
-\draw[pstyle2] (405pt,453.64pt) ..controls (405pt,470.06pt) and (405pt,478.99pt) .. (405pt,495.4pt);
-\draw[pstyle2] (405pt,435.64pt) -- (399pt,453.64pt) -- (411pt,453.64pt) -- (405pt,435.64pt) -- cycle;
-\draw[pstyle2] (433.9149pt,447.7305pt) ..controls (452.0249pt,464.1505pt) and (468.37pt,478.99pt) .. (486.45pt,495.4pt);
-\draw[pstyle2] (420.58pt,435.64pt) -- (429.8847pt,452.1755pt) -- (437.9451pt,443.2855pt) -- (420.58pt,435.64pt) -- cycle;
-\draw[pstyle2] (439.0583pt,437.3559pt) ..controls (473.1583pt,453.2359pt) and (526.02pt,477.85pt) .. (563.76pt,495.42pt);
-\draw[pstyle2] (428.18pt,432.29pt) -- (431.9305pt,438.449pt) -- (439.0583pt,437.3559pt) -- (435.3078pt,431.1969pt) -- (428.18pt,432.29pt) -- cycle;
-\draw[pstyle2] (389.3802pt,66.8385pt) ..controls (381.5202pt,87.5385pt) and (371.22pt,114.68pt) .. (363.36pt,135.38pt);
-\draw[pstyle2] (393.64pt,55.62pt) -- (387.7706pt,59.8093pt) -- (389.3802pt,66.8385pt) -- (395.2496pt,62.6492pt) -- (393.64pt,55.62pt) -- cycle;
-\draw[pstyle2] (502pt,537.64pt) ..controls (502pt,554.06pt) and (502pt,568.99pt) .. (502pt,585.4pt);
-\draw[pstyle2] (502pt,525.64pt) -- (498pt,531.64pt) -- (502pt,537.64pt) -- (506pt,531.64pt) -- (502pt,525.64pt) -- cycle;
-\draw[pstyle2] (618pt,267.64pt) ..controls (618pt,284.06pt) and (618pt,298.99pt) .. (618pt,315.4pt);
-\draw[pstyle2] (618pt,255.64pt) -- (614pt,261.64pt) -- (618pt,267.64pt) -- (622pt,261.64pt) -- (618pt,255.64pt) -- cycle;
-\draw[pstyle2] (318.1275pt,170.8861pt) ..controls (284.3475pt,187.3061pt) and (239.75pt,208.99pt) .. (206.01pt,225.4pt);
-\draw[pstyle2] (328.92pt,165.64pt) -- (321.775pt,164.6655pt) -- (318.1275pt,170.8861pt) -- (325.2724pt,171.8606pt) -- (328.92pt,165.64pt) -- cycle;
-\draw[pstyle2] (345.0526pt,176.2756pt) ..controls (336.4726pt,192.6956pt) and (327.95pt,208.99pt) .. (319.37pt,225.4pt);
-\draw[pstyle2] (350.61pt,165.64pt) -- (344.2861pt,169.1053pt) -- (345.0526pt,176.2756pt) -- (351.3765pt,172.8103pt) -- (350.61pt,165.64pt) -- cycle;
-\draw[pstyle2] (410.8565pt,169.3875pt) ..controls (459.3065pt,185.7875pt) and (527.65pt,208.92pt) .. (576.23pt,225.36pt);
-\draw[pstyle2] (399.49pt,165.54pt) -- (403.8907pt,171.2526pt) -- (410.8565pt,169.3875pt) -- (406.4557pt,163.6749pt) -- (399.49pt,165.54pt) -- cycle;
-\draw[pstyle2] (335.658pt,263.886pt) ..controls (353.018pt,280.306pt) and (372.76pt,298.99pt) .. (390.1pt,315.4pt);
-\draw[pstyle2] (326.94pt,255.64pt) -- (328.5504pt,262.669pt) -- (335.658pt,263.886pt) -- (334.0477pt,256.857pt) -- (326.94pt,255.64pt) -- cycle;
-\draw[pstyle2] (472.7537pt,263.9818pt) ..controls (455.7737pt,280.4018pt) and (436.55pt,298.99pt) .. (419.58pt,315.4pt);
-\draw[pstyle2] (481.38pt,255.64pt) -- (474.2862pt,256.9355pt) -- (472.7537pt,263.9818pt) -- (479.8474pt,262.6864pt) -- (481.38pt,255.64pt) -- cycle;
-\draw[pstyle2] (334.8263pt,86.9235pt) ..controls (342.2863pt,107.0735pt) and (347.16pt,120.24pt) .. (352.75pt,135.33pt);
-\draw[pstyle2] (330.66pt,75.67pt) -- (328.992pt,82.6855pt) -- (334.8263pt,86.9235pt) -- (336.4943pt,79.908pt) -- (330.66pt,75.67pt) -- cycle;
-\draw[pstyle2] (405pt,357.64pt) ..controls (405pt,374.06pt) and (405pt,388.99pt) .. (405pt,405.4pt);
-\draw[pstyle2] (405pt,345.64pt) -- (401pt,351.64pt) -- (405pt,357.64pt) -- (409pt,351.64pt) -- (405pt,345.64pt) -- cycle;
-\draw[pstyle2] (398.1562pt,303.5677pt) ..controls (389.3362pt,270.1677pt) and (370.57pt,199.09pt) .. (361.77pt,165.77pt);
-\draw[pstyle2] (401.22pt,315.17pt) -- (403.5555pt,308.3476pt) -- (398.1562pt,303.5677pt) -- (395.8207pt,310.3901pt) -- (401.22pt,315.17pt) -- cycle;
+\draw[pstyle0] (313.5pt,230.5pt) arc (180:270:5pt) -- (318.5pt,225.5pt) -- (387.82pt,225.5pt) arc (270:360:5pt) -- (392.82pt,230.5pt) -- (392.82pt,250.5pt) arc (0:90:5pt) -- (387.82pt,255.5pt) -- (318.5pt,255.5pt) arc (90:180:5pt) -- (313.5pt,250.5pt) -- cycle;
+\node at (323.5pt,235.5pt)[below right,color=black,inner sep=0]{Game history};
+\draw[pstyle0] (609.5pt,230.5pt) arc (180:270:5pt) -- (614.5pt,225.5pt) -- (703.49pt,225.5pt) arc (270:360:5pt) -- (708.49pt,230.5pt) -- (708.49pt,250.5pt) arc (0:90:5pt) -- (703.49pt,255.5pt) -- (614.5pt,255.5pt) arc (90:180:5pt) -- (609.5pt,250.5pt) -- cycle;
+\node at (619.5pt,235.5pt)[below right,color=black,inner sep=0]{Personal statistics};
+\draw[pstyle0] (617pt,322.5pt) arc (180:270:5pt) -- (622pt,317.5pt) -- (696.03pt,317.5pt) arc (270:360:5pt) -- (701.03pt,322.5pt) -- (701.03pt,342.5pt) arc (0:90:5pt) -- (696.03pt,347.5pt) -- (622pt,347.5pt) arc (90:180:5pt) -- (617pt,342.5pt) -- cycle;
+\node at (627pt,327.5pt)[below right,color=black,inner sep=0]{Statistics filter};
+\draw[pstyle0] (607.5pt,608.5pt) arc (180:270:5pt) -- (612.5pt,603.5pt) -- (667.99pt,603.5pt) arc (270:360:5pt) -- (672.99pt,608.5pt) -- (672.99pt,628.5pt) arc (0:90:5pt) -- (667.99pt,633.5pt) -- (612.5pt,633.5pt) arc (90:180:5pt) -- (607.5pt,628.5pt) -- cycle;
+\node at (617.5pt,613.5pt)[below right,color=black,inner sep=0]{Board size};
+\draw[pstyle0] (466.5pt,28.5pt) arc (180:270:5pt) -- (471.5pt,23.5pt) -- (574.01pt,23.5pt) arc (270:360:5pt) -- (579.01pt,28.5pt) -- (579.01pt,52.5pt) arc (0:90:5pt) -- (574.01pt,57.5pt) -- (471.5pt,57.5pt) arc (90:180:5pt) -- (466.5pt,52.5pt) -- cycle;
+\node at (476.5pt,26.5pt)[below right,color=black,inner sep=0]{Player Session};
+\draw[pstyle2] (467.5pt,36.5pt) -- (578.01pt,36.5pt);
+\node at (476.5pt,40.5pt)[below right,color=black,inner sep=0]{+ loggedIn : boolean};
+\draw[pstyle2] (411.6109pt,466.1754pt) ..controls (393.0809pt,484.3254pt) and (379.71pt,497.42pt) .. (363.55pt,513.25pt);
+\draw[pstyle2] (424.47pt,453.58pt) -- (407.4124pt,461.889pt) -- (415.8094pt,470.4618pt) -- (424.47pt,453.58pt) -- cycle;
+\draw[pstyle2] (446pt,471.58pt) ..controls (446pt,489.73pt) and (446pt,497.42pt) .. (446pt,513.25pt);
+\draw[pstyle2] (446pt,453.58pt) -- (440pt,471.58pt) -- (452pt,471.58pt) -- (446pt,453.58pt) -- cycle;
+\draw[pstyle2] (480.3891pt,466.1754pt) ..controls (498.9191pt,484.3254pt) and (512.29pt,497.42pt) .. (528.45pt,513.25pt);
+\draw[pstyle2] (467.53pt,453.58pt) -- (476.1906pt,470.4618pt) -- (484.5876pt,461.889pt) -- (467.53pt,453.58pt) -- cycle;
+\draw[pstyle2] (505.2162pt,461.4954pt) ..controls (543.2862pt,480.1354pt) and (581.44pt,498.82pt) .. (613.47pt,514.51pt);
+\draw[pstyle2] (489.05pt,453.58pt) -- (502.5778pt,466.8841pt) -- (507.8547pt,456.1066pt) -- (489.05pt,453.58pt) -- cycle;
+\draw[pstyle2] (392.8663pt,458.9253pt) ..controls (354.3963pt,478.0653pt) and (309.82pt,500.23pt) .. (278.67pt,515.73pt);
+\draw[pstyle2] (403.61pt,453.58pt) -- (396.4564pt,452.6714pt) -- (392.8663pt,458.9253pt) -- (400.0199pt,459.8339pt) -- (403.61pt,453.58pt) -- cycle;
+\draw[pstyle2] (399pt,67.62pt) ..controls (399pt,88.32pt) and (399pt,114.68pt) .. (399pt,135.38pt);
+\draw[pstyle2] (399pt,55.62pt) -- (395pt,61.62pt) -- (399pt,67.62pt) -- (403pt,61.62pt) -- (399pt,55.62pt) -- cycle;
+\draw[pstyle2] (446pt,555.64pt) ..controls (446pt,572.06pt) and (446pt,586.99pt) .. (446pt,603.4pt);
+\draw[pstyle2] (446pt,543.64pt) -- (442pt,549.64pt) -- (446pt,555.64pt) -- (450pt,549.64pt) -- (446pt,543.64pt) -- cycle;
+\draw[pstyle2] (640pt,555.64pt) ..controls (640pt,572.06pt) and (640pt,586.99pt) .. (640pt,603.4pt);
+\draw[pstyle2] (640pt,543.64pt) -- (636pt,549.64pt) -- (640pt,555.64pt) -- (644pt,549.64pt) -- (640pt,543.64pt) -- cycle;
+\draw[pstyle2] (659pt,267.56pt) ..controls (659pt,284.37pt) and (659pt,300.34pt) .. (659pt,317.24pt);
+\draw[pstyle2] (659pt,255.56pt) -- (655pt,261.56pt) -- (659pt,267.56pt) -- (663pt,261.56pt) -- (659pt,255.56pt) -- cycle;
+\draw[pstyle2] (359.1275pt,170.8861pt) ..controls (325.3475pt,187.3061pt) and (280.75pt,208.99pt) .. (247.01pt,225.4pt);
+\draw[pstyle2] (369.92pt,165.64pt) -- (362.775pt,164.6655pt) -- (359.1275pt,170.8861pt) -- (366.2724pt,171.8606pt) -- (369.92pt,165.64pt) -- cycle;
+\draw[pstyle2] (386.0526pt,176.2756pt) ..controls (377.4726pt,192.6956pt) and (368.95pt,208.99pt) .. (360.37pt,225.4pt);
+\draw[pstyle2] (391.61pt,165.64pt) -- (385.2861pt,169.1053pt) -- (386.0526pt,176.2756pt) -- (392.3765pt,172.8103pt) -- (391.61pt,165.64pt) -- cycle;
+\draw[pstyle2] (451.8565pt,169.3875pt) ..controls (500.3065pt,185.7875pt) and (568.65pt,208.92pt) .. (617.23pt,225.36pt);
+\draw[pstyle2] (440.49pt,165.54pt) -- (444.8907pt,171.2526pt) -- (451.8565pt,169.3875pt) -- (447.4557pt,163.6749pt) -- (440.49pt,165.54pt) -- cycle;
+\draw[pstyle2] (376.1531pt,263.9052pt) ..controls (392.9131pt,280.1252pt) and (411.78pt,298.38pt) .. (429.37pt,315.41pt);
+\draw[pstyle2] (367.53pt,255.56pt) -- (369.0598pt,262.607pt) -- (376.1531pt,263.9052pt) -- (374.6233pt,256.8583pt) -- (367.53pt,255.56pt) -- cycle;
+\draw[pstyle2] (514.2506pt,264.0009pt) ..controls (497.8606pt,280.2209pt) and (479.49pt,298.38pt) .. (462.27pt,315.41pt);
+\draw[pstyle2] (522.78pt,255.56pt) -- (515.7017pt,256.9373pt) -- (514.2506pt,264.0009pt) -- (521.3289pt,262.6236pt) -- (522.78pt,255.56pt) -- cycle;
+\draw[pstyle2] (339.3071pt,69.9122pt) ..controls (355.3471pt,91.3122pt) and (373.99pt,116.15pt) .. (388.41pt,135.37pt);
+\draw[pstyle2] (332.11pt,60.31pt) -- (332.5078pt,67.5101pt) -- (339.3071pt,69.9122pt) -- (338.9093pt,62.712pt) -- (332.11pt,60.31pt) -- cycle;
+\draw[pstyle2] (446pt,361.52pt) ..controls (446pt,377.88pt) and (446pt,391.36pt) .. (446pt,409.36pt);
+\draw[pstyle2] (446pt,349.52pt) -- (442pt,355.52pt) -- (446pt,361.52pt) -- (450pt,355.52pt) -- (446pt,349.52pt) -- cycle;
+\draw[pstyle2] (438.7682pt,303.7893pt) ..controls (429.6682pt,268.9393pt) and (411.3pt,198.61pt) .. (402.69pt,165.62pt);
+\draw[pstyle2] (441.8pt,315.4pt) -- (444.1543pt,308.5841pt) -- (438.7682pt,303.7893pt) -- (436.4139pt,310.6052pt) -- (441.8pt,315.4pt) -- cycle;
+\draw[pstyle2] (495.3913pt,65.5516pt) ..controls (471.2013pt,86.6216pt) and (438.34pt,115.24pt) .. (415.31pt,135.29pt);
+\draw[pstyle2] (504.44pt,57.67pt) -- (497.2884pt,58.5946pt) -- (495.3913pt,65.5516pt) -- (502.5428pt,64.6271pt) -- (504.44pt,57.67pt) -- cycle;
 \end{tikzpicture}
